spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 .App {
   background-color: #2d2d2d;
-  height: 100vh
+  height: 100vh;
 }
 
 .nav {
@@ -44,7 +44,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 15rem 0;
+  padding: 2em 0;
   margin: 0 auto;
   max-width: 1300px;
 }
@@ -84,7 +84,6 @@
   -webkit-background-clip: text;
   color: transparent;
   -webkit-text-fill-color: transparent;
-
 }
 
 .text h3 {
@@ -106,7 +105,7 @@
   font-weight: 400;
   color: #fff;
   list-style: none;
-  padding: .2rem 0;
+  padding: 0.2rem 0;
 }
 
 .links {
@@ -127,15 +126,32 @@
   display: inline-block;
 }
 
-
 @keyframes wave {
-  0% { transform: rotate( 0.0deg) }
-  10% { transform: rotate(14.0deg) }
-  20% { transform: rotate(-8.0deg) }
-  30% { transform: rotate(14.0deg) }
-  40% { transform: rotate(-4.0deg) }
-  50% { transform: rotate(10.0deg) }
-  60% { transform: rotate( 0.0deg) }
-  80% { transform: rotate( 0.0deg) }
-  100% { transform: rotate( 0.0deg) }
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(14deg);
+  }
+  20% {
+    transform: rotate(-8deg);
+  }
+  30% {
+    transform: rotate(14deg);
+  }
+  40% {
+    transform: rotate(-4deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  60% {
+    transform: rotate(0deg);
+  }
+  80% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
